tmux setup bash.d

--- a/config/user/tmux.conf
+++ b/config/user/tmux.conf
@@ -9,6 +9,10 @@ bind v split-window -h
 # enable mouse mode
 set -g mouse on
 
-#fix coloring in vim
+# fix coloring in vim
 set -g default-terminal "screen-256color"
+
+# change bar color
+set -g status-bg color166
+set -g status-fg black
 
