--- a/config/desktop/quicktile.cfg
+++ b/config/desktop/quicktile.cfg
@@ -30,10 +30,10 @@ H = horizontal-maximize
 
 M = maximize
 Y = bottom-left
-S = bottom
-X = bottom-right
+X = bottom
+C = bottom-right
 A = left
-C = center
+S = center
 D = right
 Q = top-left
 W = top
