fix vim+tmux ctrl+arrow cmds

--- a/etc/user/tmux.conf
+++ b/etc/user/tmux.conf
@@ -11,8 +11,10 @@ set -g mouse on
 
 # fix coloring in vim
 set -g default-terminal "screen-256color"
+# fix ctrl+arrow not deleting stuff in vim
+# https://superuser.com/a/402084/1099716
+set-window-option -g xterm-keys on
 
 # change bar color
 set -g status-bg color166
 set -g status-fg black
-
