--- a/etc/user/tmux.conf
+++ b/etc/user/tmux.conf
@@ -2,6 +2,9 @@
 unbind C-b
 set -g prefix C-a
 
+# C-q for remote sessions
+bind-key -n C-q send-prefix
+
 # easier splitting
 bind s split-window -v
 bind v split-window -h
@@ -16,5 +19,5 @@ set -g default-terminal "screen-256color"
 set-window-option -g xterm-keys on
 
 # change bar color
-set -g status-bg color166
+set -g status-bg colour166
 set -g status-fg black
