--- a/etc/user/tmux.conf
+++ b/etc/user/tmux.conf
@@ -1,3 +1,37 @@
+# cat << __SCRIPT__ >/dev/null
+# ^ hack to be able to run conf file as an inline script for some fancy scripting action
+#   https://unix.stackexchange.com/a/276925/449786
+
+# Scroll History
+set -g history-limit 50000
+
+# show messages for 4 seconds instead
+set -g display-time 4000
+
+# set first window to index 1 (not 0) to map more to the keyboard layout
+set-option -g renumber-windows on
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Make mouse useful, tmux > 2.1 include select, resize pane/window and console wheel scroll
+set -g mouse on
+
+# Lower escape timing from 500ms to 50ms for quicker response to scroll-buffer access.
+set -s escape-time 50
+
+# fix coloring in vim
+set -g default-terminal "screen-256color"
+# fix ctrl+arrow not deleting stuff in vim
+# https://superuser.com/a/402084/1099716
+set-window-option -g xterm-keys on
+
+# change bar color
+# https://i.stack.imgur.com/e63et.png
+set -g status-bg colour166
+set -g status-fg black
+set-window-option -g window-status-current-style bg=red
+
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set -g prefix C-a
@@ -9,15 +43,12 @@ bind-key -n C-q send-prefix
 bind s split-window -v
 bind v split-window -h
 
-# enable mouse mode
-set -g mouse on
+run "cut -c3- ~/.tmux.conf | sh -s tmuxSetStatusBg"
 
-# fix coloring in vim
-set -g default-terminal "screen-256color"
-# fix ctrl+arrow not deleting stuff in vim
-# https://superuser.com/a/402084/1099716
-set-window-option -g xterm-keys on
-
-# change bar color
-set -g status-bg colour166
-set -g status-fg black
+# __SCRIPT__
+# tmuxSetStatusBg() {
+#   if [ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]; then
+#     tmux set -g status-bg "#$(hostname | md5sum | cut -c-6)"
+#   fi
+# }
+# $1
