aliases: git/systectl

--- a/etc/user/tmux.conf
+++ b/etc/user/tmux.conf
@@ -47,8 +47,10 @@ run "cut -c3- ~/.tmux.conf | sh -s tmuxSetStatusBg"
 
 # __SCRIPT__
 # tmuxSetStatusBg() {
-#   if [ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]; then
-#     tmux set -g status-bg "#$(hostname | md5sum | cut -c-6)"
+#   if [ -n "$TMUX_CFG_STATUS_BG" ]; then
+#     tmux set -g status-bg "$TMUX_CFG_STATUS_BG"
+#   elif [ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]; then
+#     tmux set -g status-bg "#$(hostname | md5sum | cut -c2-7)"
 #   fi
 # }
 # $1
