introduce notify-failure service

--- a/etc/systemd/hosts-update.service
+++ b/etc/systemd/hosts-update.service
@@ -4,3 +4,4 @@ Description=hosts-update
 [Service]
 Type=oneshot
 ExecStart=/opt/msladek/stuff/bin/jobs/hosts-update.sh
+OnFailure=notify-failure@%n
