fix section for OnFailure key

--- a/etc/systemd/hosts-update.service
+++ b/etc/systemd/hosts-update.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=hosts-update
+OnFailure=notify-status@%n
 
 [Service]
 Type=oneshot
 ExecStart=/opt/msladek/stuff/bin/jobs/hosts-update.sh
-OnFailure=notify-failure@%n
