--- a/etc/systemd/zfs-health.service
+++ b/etc/systemd/zfs-health.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=zfs-health
+OnFailure=notify-status@%n
 
 [Service]
 Type=oneshot
 ExecStart=/opt/msladek/stuff/bin/jobs/zfs-health.sh
-OnFailure=notify-failure@%n
