--- a/etc/systemd/fstrim.service
+++ b/etc/systemd/fstrim.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=fstrim
+OnFailure=notify-status@%n
 
 [Service]
 Type=oneshot
 ExecStart=/opt/msladek/stuff/bin/jobs/fstrim.sh
-OnFailure=notify-failure@%n
