--- a/etc/systemd/os-rsync.service
+++ b/etc/systemd/os-rsync.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=os-rsync
+OnFailure=notify-status@%n
 
 [Service]
 Type=oneshot
 ExecStart=/opt/msladek/stuff/bin/jobs/os-rsync.sh
-OnFailure=notify-failure@%n
