--- a/etc/systemd/os-rsync.service
+++ b/etc/systemd/os-rsync.service
@@ -1,7 +1,11 @@
 [Unit]
 Description=os-rsync
 OnFailure=notify-status@%n
+StartLimitBurst=2
+StartLimitIntervalSec=10000
 
 [Service]
 Type=oneshot
+Restart=on-failure
+RestartSec=3600
 ExecStart=/opt/msladek/stuff/bin/jobs/os-rsync.sh
