--- a/etc/systemd/smart-dump.service
+++ b/etc/systemd/smart-dump.service
@@ -1,7 +1,11 @@
 [Unit]
 Description=smart-dump
 OnFailure=notify-status@%n
+StartLimitBurst=2
+StartLimitIntervalSec=10000
 
 [Service]
 Type=oneshot
+Restart=on-failure
+RestartSec=3600
 ExecStart=/opt/msladek/stuff/bin/jobs/smart-dump.sh
