--- a/etc/systemd/ssh-agent.service
+++ b/etc/systemd/ssh-agent.service
@@ -5,10 +5,10 @@ StartLimitIntervalSec=500
 
 [Service]
 Type=simple
+Restart=always
+RestartSec=60
 Environment=SSH_AUTH_SOCK=%t/ssh-agent.socket
 ExecStart=/usr/bin/ssh-agent -D -a $SSH_AUTH_SOCK
-Restart=on-failure
-RestartSec=60
 
 [Install]
 WantedBy=default.target
