--- a/etc/systemd/mysql-dump.service
+++ b/etc/systemd/mysql-dump.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=mysql-dump
+Requires=mysql.service
+After=mysql.service
 OnFailure=notify-status@%n
 StartLimitBurst=2
 StartLimitIntervalSec=10000
@@ -8,4 +10,4 @@ StartLimitIntervalSec=10000
 Type=oneshot
 Restart=on-failure
 RestartSec=3600
-ExecStart=/opt/msladek/stuff/bin/jobs/mysql-dump.sh
+ExecStart=/usr/local/sbin/mysql-dump
