--- a/etc/systemd/check-ip@.service
+++ b/etc/systemd/check-ip@.service
@@ -1,7 +1,9 @@
 [Unit]
 Description=check-ip [%i]
+Requires=network-online.target
+After=network-online.target
 OnFailure=notify-status@%n
 
 [Service]
 Type=oneshot
-ExecStart=/opt/msladek/stuff/bin/jobs/check-ip.sh %i
+ExecStart=/usr/local/sbin/check-ip %i
