--- a/etc/systemd/hosts-update.service
+++ b/etc/systemd/hosts-update.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=hosts-update
+Requires=network-online.target
+After=network-online.target
 OnFailure=notify-status@%n
 StartLimitBurst=2
 StartLimitIntervalSec=10000
@@ -8,4 +10,4 @@ StartLimitIntervalSec=10000
 Type=oneshot
 Restart=on-failure
 RestartSec=3600
-ExecStart=/opt/msladek/stuff/bin/jobs/hosts-update.sh
+ExecStart=/usr/local/sbin/hosts-update
