--- a/docker/jellyfin/compose.yml
+++ b/docker/jellyfin/compose.yml
@@ -3,6 +3,8 @@ services:
   jellyfin:
     image: linuxserver/jellyfin
     container_name: jellyfin
+    group_add:
+      - "105" # 'render' group
     environment:
       PUID: ${PUID}
       PGID: ${PGID}
@@ -14,7 +16,7 @@ services:
       - /mnt/jellyfin/config:/config
       - /mnt/jellyfin/cache:/config/cache
       - /mnt/jellyfin/cache/transcodes:/transcodes
-      - /mnt/jellyfin/videos:/data:ro
+      - /mnt/data/videos:/data:ro
     devices:
       - /dev/dri:/dev/dri
     restart: unless-stopped
